lcs-desktop (0.2~14) Lcs; urgency=low

  * Changing the display of the current date.
  * Amendment of window management. The windows are no longer assigned to an application. Each link opens a new window if not already open.
  * Added an image loader for loading the page in a window
  * Added new wallpapers
  * Changing the configuration of prefs 

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Mon, 20 Sep 2010 15:26:44 +0200

lcs-desktop (0.2~13) Lcs; urgency=low
  [Dominique Lepaisant]
  * Fix bug in call of the notification of the forum
  * Changing the defaut icon in the info wallpaper
  * modify display of spaces menu
  * Cleaning jquery.desktop.js
  * remove call of jquery in a_propos.php

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Fri, 24 Sep 2010 01:06:53 +0200

lcs-desktop (0.2~12) Lcs; urgency=low
  [Dominique Lepaisant]
  * Fix bug in index.php
  * Modify display of home page
  * Create link on item Annuaire in the menu

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Mon, 20 Sep 2010 17:18:15 +0200

lcs-desktop (0.2~11) Lcs; urgency=low
  [Jean-Luc Chretien]
   * Fix typo in test target in inc_menus_admin.php
  [Dominique Lepaisant]
   * Fix bug on authentification links
   * Display a notification when a new article is posted on the forum
   * Run the script js of desktop when the whole page is loaded
   * Add wallpaper images (by wawa)
   * Update doc-html and add jquery.scroll for anchor
   * Add doc images
   * Fix bug on link in finder
   * Fix bug on load_user.pref.pfp (rev3592)
   * Init localscroll on doc

 -- Dominique Lepaisant <dlepaisant@ac-caen.fr>  Mon, 20 Sep 2010 21:50:50 +0200

lcs-desktop (0.2~10) Lcs; urgency=low
  [Jean-Luc Chretien]
    * Replace deprecated function mysql_db_query in index.php and core/a_propos.php
  [Dominique Lepaisant] 
    * Closing squirrelmail notification on click
    * Fix bug in window resize
    * remove image prohibited
    * Fixed bug with line break in the links opening a window